--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,8 @@
     <color name="primaryText">#1E1E1E</color>
     <color name="emergency_red">#D32F2F</color>
     <color name="colorError">#D32F2F</color>
+    <color name="light_grey">#E9E5E5</color>
+
 
 
 </resources>
