--- a/app/src/main/res/layout/activity_team_details.xml
+++ b/app/src/main/res/layout/activity_team_details.xml
@@ -9,7 +9,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="5dp">
 
@@ -104,6 +104,27 @@
             android:layout_gravity="center"
             android:padding="5dp"
             app:srcCompat="@drawable/chat" />
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginTop="16dp"
+            android:elevation="8dp"
+            app:cardBackgroundColor="@android:color/white"
+            app:cardCornerRadius="16dp">
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnSummarizeChat"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:backgroundTint="@color/black"
+                android:elevation="0dp"
+                android:text="Summarize Chat"
+                android:textColor="@android:color/white"
+                app:cornerRadius="12dp" />
+        </androidx.cardview.widget.CardView>
 
 
     </LinearLayout>
