--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -70,12 +70,12 @@
                 android:layout_height="48dp"
                 android:layout_weight="1"
                 android:background="@drawable/edittext_background"
+                android:backgroundTint="@color/white"
+                android:gravity="center_vertical"
                 android:hint="Type your message..."
                 android:padding="12dp"
                 android:textColor="@color/black"
-                android:textSize="16sp"
-                android:backgroundTint="@color/black"
-                android:gravity="center_vertical" />
+                android:textSize="16sp" />
 
             <ImageButton
                 android:id="@+id/btnSend"
