--- a/app/src/main/res/layout/activity_share_fragemnt.xml
+++ b/app/src/main/res/layout/activity_share_fragemnt.xml
@@ -5,6 +5,6 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SummarizeChatActivity">
+    tools:context=".ShareFragemnt">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
