--- a/app/src/main/res/layout/item_message_received.xml
+++ b/app/src/main/res/layout/item_message_received.xml
@@ -35,6 +35,7 @@
                 android:layout_height="wrap_content"
                 android:text="Incoming message"
                 android:textColor="@android:color/black"
+                android:textIsSelectable="true"
                 android:textSize="16sp" />
 
             <TextView
