--- a/app/src/main/res/layout/item_member.xml
+++ b/app/src/main/res/layout/item_member.xml
@@ -23,11 +23,11 @@
             android:layout_height="wrap_content" />
 
         <TextView
-            android:id="@+id/tvMemberEmail"
-            android:text="Email"
-            android:textSize="14sp"
-            android:textColor="#666666"
+            android:id="@+id/tvSkills"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="Skills"
+            android:textColor="#666666"
+            android:textSize="14sp" />
     </LinearLayout>
 </androidx.cardview.widget.CardView>
